# brain-code

./: .env.example  .gitignore  README.md  pyproject.toml
n8n/: append.workflow.json  push.py  synthesize.workflow.json
prompts/: append_system.md  append_user.md.tmpl  extract_logs_system.md  extract_logs_user.md.tmpl  synthesize_cached.md.tmpl  synthesize_system.md  synthesize_user.md.tmpl
src/brain_code/: __init__.py  capture.py  claude.py  cli.py  config.py  dates.py  entities.py  files.py  omdb.py  prompts.py  recall.py  search.py  stubs.py  style.py  templates.py  wikilinks.py
src/brain_code/extractors/: movie.py  restaurant.py
tests/: test_capture.py  test_dates.py  test_entities.py  test_files.py  test_movie_extractor.py  test_prompts.py  test_recall.py  test_restaurant_extractor.py  test_search.py  test_stubs.py  test_style.py  test_templates.py  test_wikilinks.py
